Resolves: fdo#36514 avoid empty style names in ww2 docs

Change-Id: Ib7987e00bb33e46117442db74dcdd386e8a2bc97